# videocapture

./: .gitignore
opencv/: CMakeLists.txt  example.cpp
playground/: CMakeLists.txt  capture.cpp  videoutils.cpp  videoutils.h
v4l2/: CMakeLists.txt  capture.cpp
